--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 
 	<modules>
         	<module>chapter_001</module>
+        	<module>chapter_002</module>
     	</modules>
 
 
@@ -44,7 +45,7 @@
 
 
 	<build>
-		<plugins>
+		<plugins>		
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
