--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>schernigin</groupId>
+	<groupId>ru.schernigin</groupId>
 	<artifactId>java-a-to-z</artifactId>
 	<packaging>pom</packaging>
 	<version>1.0</version>
