--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<modules>
         	<module>chapter_001</module>
         	<module>chapter_002</module>
+			<module>chapter_005</module>
 			<module>chapter_008</module>
     	</modules>
 
